--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "dev": "webpack --mode development",
-    "start": "webpack serve --mode development --open",
+    "start": "webpack serve --mode development",
     "watch": "webpack --mode development --watch"
   },
   "browserslist": [
